lib-herdr/website/src/content/docs/_versions/0.7.2/ja/keyboard.mdx
---
editUrl: https://github.com/herdrdev/herdr/blob/master/docs/versions/0.7.2/website/src/content/docs/ja/keyboard.mdx
title: キーボード
description: プレフィックスとは何か、最初に覚えるべきバインド、プレフィックスなしで運用する方法。
---

:::tip[tmux や zellij から乗り換え?]
このモデルはすでにご存じのはずです。完全なデフォルトキーマップと設定構文は[キーバインドリファレンス](/ja/docs/0.7.2/configuration/#キーバインド)へどうぞ。
:::

Herdr はマウスネイティブです。キーバインドをひとつも覚えなくても、ペイン、タブ、ワークスペース、エージェントをクリックし、分割境界をドラッグし、右クリックメニューを使えます。キーボード操作は任意のレイヤーであり、必須ではありません。

## プレフィックスとは何か

ターミナルマルチプレクサは、ターミナルとその中で動くプログラムの間に位置します。プログラムはすでにほとんどのキーの組み合わせを使っています: `ctrl+c` は中断、`ctrl+r` は履歴検索、エディタは残りのほぼすべてを占有します。もし Herdr がよく使われるキーを直接奪えば、中のプログラムを壊してしまいます。

プレフィックスはこれを解決します。プレフィックスキー (デフォルト `ctrl+b`) を押すと、次のキー入力はターミナルではなく Herdr に送られます。`prefix+c` は「`ctrl+b` を押して離し、次に `c` を押す」という意味です。何十ものキーを予約する代わりに、ひとつだけ予約します。

いつでも `prefix+?` を押すと、すべての有効なバインドが表示されます。

## まずこの 5 つを覚える

| アクション | キー |
| --- | --- |
| 新しいタブ | `prefix+c` |
| 右 / 下に分割 | `prefix+v` / `prefix+minus` |
| ペイン間の移動 | `prefix+h/j/k/l` |
| ワークスペースナビゲーション | `prefix+w` |
| すべてを動かしたままデタッチ | `prefix+q` |

これで日常の移動のほとんどをカバーできます。それ以外はマウスのままで大丈夫です。

## 残りはタスク別に

ペイン:

| アクション | キー |
| --- | --- |
| フォーカス中のペインをズーム | `prefix+z` |
| ペインを閉じる | `prefix+x` |
| ペインを入れ替える | `prefix+shift+h/j/k/l` |
| リサイズモード | `prefix+r` |
| コピーモード | `prefix+[` |

タブ:

| アクション | キー |
| --- | --- |
| 次 / 前のタブ | `prefix+n` / `prefix+p` |
| タブ 1–9 にジャンプ | `prefix+1..9` |
| タブの名前を変更 | `prefix+shift+t` |
| タブを閉じる | `prefix+shift+x` |

ワークスペースとセッション:

| アクション | キー |
| --- | --- |
| 新しいワークスペース | `prefix+shift+n` |
| ワークスペースの名前を変更 | `prefix+shift+w` |
| ワークスペースを閉じる | `prefix+shift+d` |
| Goto ピッカー | `prefix+g` |
| サイドバーの表示切り替え | `prefix+b` |

完全なキーマップとバインドの構文は[キーバインドリファレンス](/ja/docs/0.7.2/configuration/#キーバインド)にあります。

## コピーモード

`prefix+[` を押すと、フォーカス中のペインでコピーモードに入ります。`h/j/k/l`、`w/b/e`、`{`/`}` で移動し、`v` または Space で選択を開始し、`y` または Enter でコピーし、`q` または Esc でコピーせずに抜けます。マウスのドラッグ選択なら、コピーモードに入らずにそのままコピーできます。

## 何でも変更できる

プレフィックス自体を含め、すべてのバインドは設定可能です:

```toml
[keys]
prefix = "ctrl+a"
```

## プレフィックスなしで運用する

Herdr のアクションを、プレフィックス不要の直接コードに割り当てることもできます。難しいのはどのコードが安全かを知ることです。ターミナル、シェル、デスクトップ環境がすでにキーボードの大半を占有しているからです。

どんなコードでもバインドにできます: `ctrl+j`、`alt+k`、手に馴染むものなら何でも。ただしコードが Herdr に届くまでには 3 つの層を通り抜ける必要があります: オペレーティングシステム、外側のターミナル (Ghostty、iTerm2 などは独自のデフォルトを持ちます)、そしてペイン内で動くプログラムです。`ctrl+j` は Herdr まで問題なく届きますが、シェルやエディタはそれを Enter として扱います。`alt+k` は Linux では空いていますが、macOS ではほとんどのターミナルで特殊文字に合成されます。これらの系統からコードを選ぶ場合は、自分のターミナルと OS のショートカットと衝突しないか確認してください。

私たちは Ghostty、iTerm2、Terminal.app、kitty、WezTerm、Alacritty、Warp、Windows Terminal、GNOME Terminal、Konsole のデフォルトキーバインドと、GNOME および KDE のグローバルショートカットを調査しました。ほぼどこでも使われていない修飾キーの系統がひとつあります: `ctrl+alt` です。ターミナルはこれを空けたままにしており、素の `alt` コードを阻む macOS の option キー合成の影響も受けず、モダンなキーボードプロトコルのないターミナルでも送信されます。安全なデフォルトとしてお勧めしますが、選択はあなた次第です。

この設定はプレフィックスバインドを維持したまま、直接コードを追加します:

```toml
[keys]
focus_pane_left = ["prefix+h", "ctrl+alt+h"]
focus_pane_down = ["prefix+j", "ctrl+alt+j"]
focus_pane_up = ["prefix+k", "ctrl+alt+k"]
focus_pane_right = ["prefix+l", "ctrl+alt+l"]
previous_tab = ["prefix+p", "ctrl+alt+["]
next_tab = ["prefix+n", "ctrl+alt+]"]
new_tab = ["prefix+c", "ctrl+alt+c"]
split_vertical = ["prefix+v", "ctrl+alt+d"]
split_horizontal = ["prefix+minus", "ctrl+alt+shift+d"]
zoom = ["prefix+z", "ctrl+alt+z"]
```

いくつかの `ctrl+alt` コードは他で使われています。これらは避けてください:

| コード | 使用しているもの |
| --- | --- |
| `ctrl+alt+arrows` | GNOME のワークスペース切り替え、Ghostty と Konsole のデフォルト |
| `ctrl+alt+t` | Ubuntu と Fedora の「ターミナルを起動」 |
| `ctrl+alt+l` / `ctrl+alt+a` | KDE のロック画面 / アテンションウィンドウ |
| `ctrl+alt+s` / `ctrl+alt+u` | Konsole |
| `ctrl+alt+f1..f12` | Linux の仮想コンソール切り替え |

直接コードを押しても何も起きない場合、Herdr に届く前にターミナルかデスクトップ環境がそれを消費しています。どちらかを再設定してください: ターミナルの設定でそのコードを解放するか、Herdr で別のコードを選びます。
